# Previsionix

./: README.md
Worker/backup/: BackUpGoogleDrive.py  client_secrets.json  mycreds.txt  pyproject.toml  restore.sh  start.sh
Worker/datagetter/: asterix.py  codeTable.json  main.py  notes.txt  pyproject.toml  start.sh  temperature.py
Worker/datagetter/Tools/: tools.py
back/: pyproject.toml  routes.py  server.py  start.sh
back/data/: stats.py
back/learn/: test.py
back/prevision/: learn.py  predict.py
front/: package.json
front/nginxconf/: previsionix.tk
front/public/: index.html
front/src/: App.vue  main.js
front/src/components/: index.js
front/src/components/charts/: BarChart.vue  LineChart.vue  MultipleLine.vue  ScatterChart.vue
front/src/components/core/: Drawer.vue  Filter.vue  Footer.vue  View.vue
front/src/components/helper/: Offset.vue
front/src/components/material/: Card.vue  ChartCard.vue  Notification.vue  StatsCard.vue
front/src/plugins/: theme.js  vuetify.js
front/src/router/: index.js  paths.js
front/src/views/: Data.vue  Prevision.vue  Statistics.vue  Today.vue
