[tool.poetry]
name = "BackendPrevisionix"
version = "0.1.0"
description = ""
authors = ["Lucas <lucas.mgu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
schedule = "^0.6.0"
asyncio = "^3.4.3"
aiohttp = "^3.7.3"
redis = "^3.5.3"
motor = "^2.3.0"
numpy = "^1.19.4"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.3"
requests = "^2.25.0"
APScheduler = "^3.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
