[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["Lucas <lucas.mgu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.1"
redis = "^3.5.3"
schedule = "^0.6.0"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
